@@ -1,4 +1,4 @@
-var g = Graphics.createArrayBuffer(8,8,8);
+var g = Graphics.createArrayBuffer(8,16,8);
 g.dump = _=>{
   var s = "";
   var b = new Uint8Array(g.buffer);
@@ -25,11 +25,20 @@ function SHOULD_BE(a) {
 // left align
 g.clear(1);
 g.setClipRect(0,0, g.getWidth()-1, 0);
-g.drawString("T", 0, 0);
-// font visibility should mean that the top line of T is drawn
+g.drawString("T", 0, 0); // font visibility should mean that the top line of T is drawn
+g.setClipRect(0,0, g.getWidth()-1, g.getHeight()-1); // reset, just in case
+
 
 SHOULD_BE(`
 ###.....
+........
+........
+........
+........
+........
+........
+........
+........
 ........
 ........
 ........
@@ -43,8 +52,8 @@ SHOULD_BE(`
 g.clear(1);
 g.setRotation(2);
 g.setClipRect(0,0, g.getWidth()-1, 1);
-g.drawString("T", 0, 0);
-// font visibility should mean that the top line of T is drawn
+g.drawString("T", 0, 0); // font visibility should mean that the top line of T is drawn
+g.setClipRect(0,0, g.getWidth()-1, g.getHeight()-1); // reset, just in case
 
 SHOULD_BE(`
 ........
@@ -53,8 +62,74 @@ SHOULD_BE(`
 ........
 ........
 ........
+........
+........
+........
+........
+........
+........
+........
+........
 ......#.
 .....###`);
+
+
+// Vector
+
+g.clear(1).setRotation(0).drawString("HELLO",0,0);
+SHOULD_BE(`
+#.#.###.
+#.#.#...
+###.##..
+#.#.#...
+#.#.###.
+........
+........
+........
+........
+........
+........
+........
+........
+........
+........
+........`);
+g.clear(1).setRotation(1).drawString("HELLO",0,0).setRotation(0);
+SHOULD_BE(`
+...#####
+.....#..
+...#####
+........
+...#####
+...#.#.#
+...#...#
+........
+...#####
+...#....
+...#....
+........
+...#####
+...#....
+...#....
+........`);
+g.clear(1).setRotation(3).drawString("HELLO",0,0).setRotation(0);
+SHOULD_BE(`
+........
+....#...
+....#...
+#####...
+........
+....#...
+....#...
+#####...
+........
+#...#...
+#.#.#...
+#####...
+........
+#####...
+..#.....
+#####...`);
 
 
 result = ok;
