@@ -38,6 +38,7 @@
             Fix potential lock leaks during out of memory errors
             Graphics: Added g.getVectorFontPolys to allow the underlying polygons behind a vector font to be retrieved
             nRF5x: ensure we only clear pairing data if ALL buttons are pressed at boot to avoid accidental deletion
+            Graphics: Fix font clipping on rotated non-square graphics instances (fix #2326)
 
      2v16 : JIT functions now execute in their own function scope (allows arguments)
             Move older 'HY' boards to use `g` for the built-in graphics, not `LCD` (and change docs)
